Update LevelParent.java
LevelParent no longer has to handle the intricacies of collision detection, making it focused on managing game structure and state.